# socket_for_linux

./: CMakeLists.txt  README.md
include/: common.h  mysocket.hpp  tcpclient.h  tcpserver.h
include/tcp/: mytcpsocket.hpp  tcpclient.h  tcpserver.h
include/udp/: myudpsocket.hpp  udpclient.h  udpserver.h
src/: client_main.cpp  server_main.cpp  tcpclient.cpp  tcpserver.cpp
src/tcp/: client_main.cpp  server_main.cpp  tcpclient.cpp  tcpserver.cpp
src/udp/: client_main.cpp  server_main.cpp  udpclient.cpp  udpserver.cpp
